--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fashion Hub</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preload" href="https://picsum.photos/1200/400.webp" as="image" type="image/webp">
+    <link rel="preload" href="https://picsum.photos/1200/400.avif" as="image" type="image/avif">
 </head>
 <body>
     <header>
@@ -18,6 +20,11 @@
         </nav>
     </header>
     <section class="hero">
+        <picture>
+            <source srcset="https://picsum.photos/1200/400.webp" type="image/webp">
+            <source srcset="https://picsum.photos/1200/400.avif" type="image/avif">
+            <img src="https://picsum.photos/1200/400" alt="Fashion Hub Hero Image" style="display:none;">
+        </picture>
         <h2>Welcome to Fashion Hub</h2>
         <p>Your go-to destination for the latest fashion trends.</p>
     </section>
