--- a/gallery.html
+++ b/gallery.html
@@ -20,10 +20,26 @@
     <section class="gallery">
         <h2>Gallery</h2>
         <div class="image-grid">
-            <img src="https://picsum.photos/200/300?random=1" alt="Fashion 1">
-            <img src="https://picsum.photos/200/300?random=2" alt="Fashion 2">
-            <img src="https://picsum.photos/200/300?random=3" alt="Fashion 3">
-            <img src="https://picsum.photos/200/300?random=4" alt="Fashion 4">
+            <picture>
+                <source srcset="https://picsum.photos/200/300?random=1.webp" type="image/webp">
+                <source srcset="https://picsum.photos/200/300?random=1.avif" type="image/avif">
+                <img src="https://picsum.photos/200/300?random=1" alt="Fashion 1">
+            </picture>
+            <picture>
+                <source srcset="https://picsum.photos/200/300?random=2.webp" type="image/webp">
+                <source srcset="https://picsum.photos/200/300?random=2.avif" type="image/avif">
+                <img src="https://picsum.photos/200/300?random=2" alt="Fashion 2">
+            </picture>
+            <picture>
+                <source srcset="https://picsum.photos/200/300?random=3.webp" type="image/webp">
+                <source srcset="https://picsum.photos/200/300?random=3.avif" type="image/avif">
+                <img src="https://picsum.photos/200/300?random=3" alt="Fashion 3">
+            </picture>
+            <picture>
+                <source srcset="https://picsum.photos/200/300?random=4.webp" type="image/webp">
+                <source srcset="https://picsum.photos/200/300?random=4.avif" type="image/avif">
+                <img src="https://picsum.photos/200/300?random=4" alt="Fashion 4">
+            </picture>
         </div>
     </section>
     <footer>
