--- a/gallery.html
+++ b/gallery.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fashion Hub - Gallery</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Fashion Hub</h1>
@@ -21,29 +23,34 @@
         <h2>Gallery</h2>
         <div class="image-grid">
             <picture>
-                <source srcset="https://picsum.photos/200/300?random=1.webp" type="image/webp">
-                <source srcset="https://picsum.photos/200/300?random=1.avif" type="image/avif">
-                <img src="https://picsum.photos/200/300?random=1" alt="Fashion 1">
+                <source srcset="images/fashion1.webp" type="image/webp">
+                <source srcset="images/fashion1.avif" type="image/avif">
+                <img src="images/fashion1.jiff" alt="Fashion 1">
             </picture>
             <picture>
-                <source srcset="https://picsum.photos/200/300?random=2.webp" type="image/webp">
-                <source srcset="https://picsum.photos/200/300?random=2.avif" type="image/avif">
-                <img src="https://picsum.photos/200/300?random=2" alt="Fashion 2">
+                <source srcset="images/fashion2.webp" type="image/webp">
+                <source srcset="images/fashion2.avif" type="image/avif">
+                <img src="images/fashion2.jiff" alt="Fashion 2">
             </picture>
             <picture>
-                <source srcset="https://picsum.photos/200/300?random=3.webp" type="image/webp">
-                <source srcset="https://picsum.photos/200/300?random=3.avif" type="image/avif">
-                <img src="https://picsum.photos/200/300?random=3" alt="Fashion 3">
+                <source srcset="images/fashion3.webp" type="image/webp">
+                <source srcset="images/fashion3.avif" type="image/avif">
+                <img src="images/fashion3.jpg" alt="Fashion 3">
             </picture>
             <picture>
-                <source srcset="https://picsum.photos/200/300?random=4.webp" type="image/webp">
-                <source srcset="https://picsum.photos/200/300?random=4.avif" type="image/avif">
-                <img src="https://picsum.photos/200/300?random=4" alt="Fashion 4">
+                <source srcset="images/fashion4.webp" type="image/webp">
+                <source srcset="images/fashion4.avif" type="image/avif">
+                <img src="images/fashion4.jpg" alt="Fashion 4">
             </picture>
         </div>
     </section>
+
     <footer>
         <p>&copy; 2024 Fashion Hub. All rights reserved.</p>
+        <button id="scrollToTopBtn" title="Scroll to top">Top</button>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
+
 </html>
