--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fashion Hub - Contact</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Fashion Hub</h1>
@@ -19,7 +21,7 @@
     </header>
     <section class="contact">
         <h2>Contact Us</h2>
-        <form>
+        <form id="contactForm">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
@@ -29,8 +31,12 @@
             <button type="submit">Send</button>
         </form>
     </section>
+
     <footer>
         <p>&copy; 2024 Fashion Hub. All rights reserved.</p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
+
 </html>
