--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YQ1PW6YV76"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YQ1PW6YV76');
+</script>
     <title>Fashion Hub</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preload" href="https://picsum.photos/1200/400.webp" as="image" type="image/webp">
